# partho-dev

./: .gitignore  Makefile  README.md  conf.py  estimate_pi.py  estimate_pi.rst  estimate_pi_mcse.rst  firebase.json  index.rst  pyproject.toml
blog/: estimate_pi.rst  estimate_pi_2.py  estimate_pi_mcse.rst  file-based-cache.puml  sessions.rst  sessions2.rst  spellingbee.rst
examples/examples/: settings.py  urls.py
examples/helloworld/: urls.py  views.py
stash/: sessions2.rst.stash
