[tool.poetry]
name = "django_is_a_beast"
version = "0.1.0"
description = "Blog"
authors = ["Partho Bhowmick <p.s.bhowmick@gmail.com>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
Django = "^4.1"
sphinx = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
