[tool.poetry]
name = "django_is_a_beast"
version = "0.1.0"
description = "Blog"
authors = ["Partho Bhowmick <p.s.bhowmick@gmail.com>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
Django = "^4.1"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
